# vauxl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  package-lock.json
.github/workflows/: ci.yaml  client_ci.yaml
vauxl-client/: Cargo.toml  Dioxus.toml  README.md  input.css  tailwind.config.js
vauxl-client/api/: Cargo.toml
vauxl-client/core/: Cargo.toml
vauxl-client/frontend/: Cargo.toml
vauxl-client/frontend/assets/themes/: active.theme.json
vauxl-client/frontend/assets/themes/default/discord/: theme.config.json
vauxl-client/frontend/assets/themes/default/webex/: theme.config.json
vauxl-client/public/: discord.css
vauxl-client/public/assets/themes/: active.theme.json
vauxl-client/public/assets/themes/default/discord/: theme.config.json
vauxl-client/public/assets/themes/default/webex/: theme.config.json
vauxl-client/src/: main.rs
vauxl-plugin-api/: Cargo.toml
vauxl-protocol/: Cargo.toml
vauxl-server/: Cargo.toml
