[workspace]
resolver = "2"
members = [
    "vauxl-client",
    "vauxl-server",
    "vauxl-protocol",
    "vauxl-plugin-api"
]

[workspace.package]
version = "0.6.1"

[workspace.dependencies]
dioxus          = { version = "0.6.3" }
dioxus-desktop  = { version = "0.6.3" }
dioxus-web      = { version = "0.6.3" }
uuid            = { version = "1.4" }
chrono          = { version = "0.4" }
serde           = { version = "1.0" }
serde_json      = "1.0"
reqwest         = { version = "0.11" }
tokio           = { version = "1" }
log             = "0.4"
env_logger      = "0.10"
wasm-bindgen    = "0.2"

manganis = {  version = "0.6.2" }
manganis-core = { version = "0.6.2" }
manganis-macro = {  version = "0.6.2" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"