[workspace]
resolver = "2"
members = [
    "vauxl-client",
    "vauxl-server",
    "vauxl-protocol",
    "vauxl-plugin-api"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
dioxus          = { version = "0.6.3" }
dioxus-desktop  = { version = "0.6.3" }
dioxus-web      = { version = "0.6.3" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"