[workspace]
resolver = "2"
members = [
    "vauxl-client",
    "vauxl-server",
    "vauxl-protocol",
    "vauxl-plugin-api"
]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
dioxus          = { version = "0.6.3" }
dioxus-desktop  = { version = "0.6.3" }
dioxus-web      = { version = "0.6.3" }
dioxus-core     = { version = "0.6.3" }

serde           = { version = "1.0" }
serde_json      = { version = "1.0" }
serde_yaml      = { version = "0.9"}
anyhow          = { version = "1.0" }
directories     = { version = "6.0.0" }
zip             = { version = "2.6.1" }
fs_extra        = { version = "1.3.0" }
tokio           = {  version = "1.44.2" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
