[package]
name = "vauxl-client"
version = "0.1.0" # Match workspace version
edition = "2024"
authors = ["KyleDerZweite"]
description = "Native, modular, theme-driven client for the Vauxl communication platform."
license = "Apache-2.0"

[dependencies]
# Core dependencies from workspace
dioxus = { workspace = true, features = ["router"] }
dioxus-desktop = { workspace = true, optional = true }
dioxus-web = { workspace = true, optional = true }
dioxus-mobile = { version = "0.6.2", optional = true }  # Explicitly using 0.6.2 as there's no 0.6.3


[features]
default = ["desktop"]
web = ["dioxus-web", "dioxus/web"]
desktop = ["dioxus-desktop", "dioxus/desktop"]
mobile = ["dioxus-mobile", "dioxus/mobile"]